# cpp-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cpp-template/: README.md
cpp-template/src/: CMakeLists.txt
cpp-template/src/{{name}}/: main.cpp  {{name}}.cpp
cpp-template/tests/{{name}}/: CMakeLists.txt  test_main.cpp  test_{{name}}.cpp
src/: CMakeLists.txt
src/cpp_template/: CMakeLists.txt  build_config.hpp.in  cpp_template.cpp  cpp_template.hpp  main.cpp
src/{{name}}/: CMakeLists.txt  build_config.hpp.in  {{name}}.hpp
tests/: CMakeLists.txt
tests/cpp_template/: CMakeLists.txt  mock_foo.hpp  test_cpp_template.cpp  test_main.cpp
tests/{{name}}/: mock_foo.hpp
